render squares correctly;

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,7 @@ ol,
 ul {
   padding-left: 30px;
 }
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
-}
+
 .status {
   margin-bottom: 10px;
 }
@@ -27,6 +23,11 @@ ul {
   padding: 0;
   text-align: center;
   width: 34px;
+}
+.square:nth-of-type(9n+1) {
+  clear: both;
+  content: "";
+  display: table;
 }
 .square:focus {
   outline: none;
