--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@ ul {
   margin-bottom: 10px;
 }
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #8b6a09;
+  border: 1px solid #aaa;
   float: left;
   font-size: 24px;
   font-weight: bold;
