--- a/src/App.css
+++ b/src/App.css
@@ -8,59 +8,96 @@ ul {
   list-style: none;
 }
 
-.status {
-  font-size: 24px;
-  margin-bottom: 10px;
+
+.photo-wrapper {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 99;
 }
-.square {
-  background: #a57d04;
-  color: #a6a08f;
-  border: none;
-  float: left;
-  font-size: 28px;
-  font-weight: 100;
-  line-height: 34px;
-  height: 34px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
+
+.photo-main {
+  top: 50%;
+  position: absolute;
+  width: 100%;
+  z-index: 999;
+  transform: translate(0, -50%);
+}
+
+.photo-content {
   position: relative;
-  cursor: pointer;
+  border: 2px solid white;
+  margin: auto;
+  width: fit-content;
+  padding: 8px;
+
+  img {
+    max-width: 90vw;
+    max-height: 90vh;
+  }
 }
-.square:nth-of-type(19n+1) {
-  clear: both;
-  content: "";
-  display: table;
-}
-.square:focus {
-  outline: none;
-}
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-.game {
+.albums-container {
   display: flex;
+  width: 70%;
+  position: relative;
+  margin: auto;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 30px;
-}
-.game-info {
-  margin-right: 50px;
-}
-.moves {
-  overflow: scroll;
-  max-height: 300px;
-  cursor: pointer;
-  line-height: 1.5;
-  padding: 10px 0;
-  width: 150px;
-  font-size: 15px;
-  * {
-    color: #0598bc;
+  padding-bottom: 50px;
+  align-items: flex-start;
+  background-color: black;
+  margin-top: 2em;
+
+  .album-container {
+    border: 5px solid white;
+    margin: 10px;
+    height: fit-content;
+    padding: 8px;
+    position: relative;
+    cursor: pointer;
+
+    img {
+      width: 200px;
+    }
+
+    .album-text-container {
+      position: absolute;
+      text-align: center;
+      width: 70%;
+      height: 100%;
+      top: 35%;
+      padding: 0px 25px;
+      display: none;
+
+      p {
+        font-size: 14px;
+        line-height: 1.5;
+      }
+    }
+
+    &:hover {
+      img {
+        opacity: 0.4;
+      }
+      .album-text-container {
+        display: block;
+      }
+    }
   }
 }
 
-.matrix {
-  font-size: 32px;
-  line-height: 1;
+body.page-photography {
+  .App {
+    background-image: none;
+    position: sticky;
+
+    footer {
+      background: black;
+      opacity: 0.9;
+    }
+  }
 }
