--- a/src/App.css
+++ b/src/App.css
@@ -17,18 +17,16 @@ ul {
 }
 
 .App-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
   font-size: 1.2em;
   margin: auto;
   width: 100%;
+  text-align: center;
+  position: absolute;
 }
 
 .App-logo {
   img {
-    width: 300px;
+    height: 200px;
   }
 }
 
@@ -49,19 +47,15 @@ footer {
   display: flex;
   position: fixed;
   font-size: 12px;
-  bottom: 20px;
+  bottom: 0;
+  padding: 10px 0;
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 3;
-  height: 40px;
-
-  div {
-    margin-top: 10px;
-  }
-
-  span {
-    margin: 0 10px;
+  background-color: #000;
+  flex-direction: row;
+  @media screen and (max-width: 480px){
+    flex-direction: column;
   }
 }
 
@@ -86,6 +80,7 @@ a:focus, a:hover {
 }
 .social-links {
   color: #fff;
+  margin: 10px;
   a {
     margin: 0 1em;
   }
@@ -96,7 +91,6 @@ a:focus, a:hover {
 
 .albums-container {
   display: flex;
-  width: 70%;
   position: relative;
   margin: auto;
   flex-direction: row;
@@ -104,7 +98,6 @@ a:focus, a:hover {
   justify-content: center;
   align-items: flex-start;
   background-color: black;
-  height: 50vh;
 }
 
 .album-container {
@@ -151,8 +144,6 @@ a:focus, a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 50px;
-  height: 50vh;
   align-items: flex-start;
 }
 
@@ -233,10 +224,10 @@ cursor: pointer;
 .music-list-container {
   iframe {
     width: 100%;
-    height: 50vh;
+    margin-top: 200px;
+    height: 60vh;
     opacity: 0.7;
   }
-  height: 50vh;
 }
 
 .events-container {
@@ -245,23 +236,21 @@ cursor: pointer;
     font-size: 1.2em;
   }
 }
-
+.albums-container, .music-list-container, .photos-container {
+  overflow: scroll;
+}
 .bit-nav-bar-container, .bit-top-track-button {
   display: none !important;
 }
 
 .bit-widget-container {
   display: block;
-  margin: 0;
-  @media screen and (max-width: 760px){
-    display: none;
-  }
-
+  margin-bottom: 100px;
 }
 .bit-no-dates-title {
   display: none;
 }
 
 .bit-widget .bit-no-dates-container {
-  padding: 50px 0 !important;
+  padding: 20px 0 !important;
 }
