--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,10 @@ ul {
   margin: auto;
   width: 100%;
   text-align: center;
-  position: absolute;
+  position: fixed;
+  background-color: #000;
+  top: 0;
+  z-index: 9;
 }
 
 .App-logo {
@@ -224,7 +227,6 @@ cursor: pointer;
 .music-list-container {
   iframe {
     width: 100%;
-    margin-top: 200px;
     height: 60vh;
     opacity: 0.7;
   }
@@ -238,6 +240,7 @@ cursor: pointer;
 }
 .albums-container, .music-list-container, .photos-container {
   overflow: scroll;
+  margin-top: 200px;
 }
 .bit-nav-bar-container, .bit-top-track-button {
   display: none !important;
