--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@ ul {
   padding-left: 0;
   list-style: none;
 }
-
+h1 {
+  font-size: 36px;
+}
 .App {
   width: 100%;
   /* max-width: 860px; */
@@ -27,20 +29,25 @@ ul {
 .App-header {
   /* background-color: #C4D8E2; */
   margin: auto;
-  margin-top: 0;
   width: 100%;
   font-size: 14px;
-  img {
-    margin-left: 20px;
-    opacity: 0;
-    height: 30px;
+  display: flex;
+  padding: 0 20px;
+  .logo {
+    padding: 30px 10px;
+    img {
+      width: 150px;
+    }
   }
   .menu {
-    display: flex;
-    justify-content: flex-end;
-    li {
-      margin: 0 20px;
-    }
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 90px;
+  margin-right: 20px;
+  flex-grow: 1;
+  li {
+    margin: 0 20px;
+  }
   }
 }
 
@@ -48,22 +55,24 @@ ul {
   /* background-color: #6d8196; */
   display: flex;
   flex-direction: row;
+  padding: 0 20px;
   section {
-    padding: 60px;
-    margin: 50px 10px;
+    padding: 40px 20px;
+    margin: 10px;
     border-radius: 20px;
     background-color: #e0e0e0;
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 600px) {
       display: none;
     }
     height: 65vh;
   }
   section.left {
-    opacity: 0.5;
+    opacity: 0.8;
     img {
-      width: 180px;
+      width: 30px;
       border-radius: 50%;
-      opacity: 1;
+      display: block;
+      padding: 10px
     }
   }
   section.right {
