--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  /* color: gray; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Gill Sans Extrabold", sans-serif;
@@ -19,7 +18,6 @@ h1 {
 }
 .App {
   width: 100%;
-  /* max-width: 860px; */
   margin: auto;
   margin-top: 0;
   min-height: 100vh;
@@ -27,32 +25,35 @@ h1 {
 }
 
 .App-header {
-  /* background-color: #C4D8E2; */
   margin: auto;
-  width: 100%;
+  width: 96%;
   font-size: 14px;
   display: flex;
-  padding: 0 20px;
   .logo {
     padding: 30px 10px;
+    margin: auto;
     img {
       width: 150px;
+      @media screen and (max-width: 600px) {
+        width: 100%;
+      }
     }
   }
   .menu {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 90px;
-  margin-right: 20px;
-  flex-grow: 1;
-  li {
-    margin: 0 20px;
-  }
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 90px;
+    flex-grow: 1;
+    li {
+      margin: 0 20px;
+    }
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
   }
 }
 
 .App-content {
-  /* background-color: #6d8196; */
   display: flex;
   flex-direction: row;
   padding: 0 20px;
@@ -72,7 +73,7 @@ h1 {
       width: 30px;
       border-radius: 50%;
       display: block;
-      padding: 10px
+      padding: 10px;
     }
   }
   section.right {
@@ -97,16 +98,19 @@ footer {
   padding-top: 10px;
 }
 
-a, a:visited, a:hover {
+a,
+a:visited,
+a:hover {
   text-decoration: none;
   font-weight: normal;
 }
 
-a:focus, a:hover {
+a:focus,
+a:hover {
   text-decoration: underline;
 }
 
 a.collapse {
   font-size: small;
-  color: #AECCE4;
+  color: #aecce4;
 }
