--- a/src/App.css
+++ b/src/App.css
@@ -80,10 +80,18 @@ h1 {
     opacity: 0.8;
     width: 50%;
     flex-grow: 1;
+    div {
+      background-color: #eee;
+      width: 46%;
+      height: 46%;
+      display: inline-block;
+      margin: 10px 15px;
+    }
   }
   h2 {
     color: gray;
   }
+  
 }
 
 footer {
