--- a/src/App.css
+++ b/src/App.css
@@ -60,15 +60,18 @@ h1 {
   section {
     padding: 40px 20px;
     margin: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: #e0e0e0;
     @media screen and (max-width: 600px) {
       display: none;
     }
     height: 65vh;
+    background-color: transparent;
+    border: 1px solid gray;
   }
   section.left {
     opacity: 0.8;
+    
     img {
       width: 30px;
       border-radius: 50%;
@@ -77,15 +80,17 @@ h1 {
     }
   }
   section.right {
-    opacity: 0.8;
+    opacity: 0.7;
     width: 50%;
     flex-grow: 1;
     div {
-      background-color: #eee;
-      width: 46%;
-      height: 46%;
+      background-color: #e0e0e0;
+      width: 45%;
+      height: 47%;
       display: inline-block;
-      margin: 10px 15px;
+      margin: 10px 20px;
+      color: #e0e0e0;
+      border-radius: 5px;
     }
   }
   h2 {
