--- a/src/App.css
+++ b/src/App.css
@@ -81,16 +81,19 @@ h1 {
   }
   section.right {
     opacity: 0.7;
-    width: 50%;
     flex-grow: 1;
     div {
       background-color: #e0e0e0;
-      width: 45%;
-      height: 47%;
+      width: 30%;
+      height: 95%;
       display: inline-block;
-      margin: 10px 20px;
+      margin: 10px;
       color: #e0e0e0;
-      border-radius: 5px;
+      border-radius: 10px;
+      @media screen and (max-width: 1000px) {
+        width: 100%;
+        height: fit-content;
+      }
     }
   }
   h2 {
