--- a/src/App.css
+++ b/src/App.css
@@ -65,13 +65,14 @@ h1 {
     @media screen and (max-width: 600px) {
       display: none;
     }
-    height: 65vh;
+    height: fit-content;
+    min-height: 500px;
     background-color: transparent;
     border: 1px solid gray;
   }
   section.left {
     opacity: 0.8;
-    
+
     img {
       width: 30px;
       border-radius: 50%;
@@ -80,19 +81,20 @@ h1 {
     }
   }
   section.right {
-    opacity: 0.7;
+    opacity: 0.8;
     flex-grow: 1;
     div {
       background-color: #e0e0e0;
       width: 30%;
-      height: 95%;
       display: inline-block;
-      margin: 10px;
-      color: #e0e0e0;
-      border-radius: 10px;
+      margin: 10px 5px;
+      text-align: center;
+      border-radius: 5px;
+      padding: 50px 0;
       @media screen and (max-width: 1000px) {
         width: 100%;
         height: fit-content;
+        margin: 10px auto;
       }
     }
   }
