--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,6 @@ h1 {
   }
   section.left {
     opacity: 0.8;
-
     img {
       width: 30px;
       border-radius: 50%;
@@ -83,18 +82,31 @@ h1 {
   section.right {
     opacity: 0.8;
     flex-grow: 1;
-    div {
+    .horizontal {
       background-color: #e0e0e0;
-      width: 30%;
-      display: inline-block;
-      margin: 10px 5px;
+      margin: auto;
+      margin-bottom: 10px;
+      border-radius: 10px;
+      width: 70%;
       text-align: center;
-      border-radius: 5px;
-      padding: 50px 0;
-      @media screen and (max-width: 1000px) {
-        width: 100%;
-        height: fit-content;
-        margin: 10px auto;
+      padding: 5px 0;
+    }
+    .vertical {
+      display: flex;
+      justify-content: space-around;
+      div {
+        background-color: #e0e0e0;
+        width: 30%;
+        margin: 10px 5px;
+        text-align: center;
+        border-radius: 10px;
+        padding: 40px 20px;
+        @media screen and (max-width: 1000px) {
+          width: 100%;
+          height: fit-content;
+          margin: 10px auto;
+        }
+        /* display: none; */
       }
     }
   }
