--- a/src/App.css
+++ b/src/App.css
@@ -97,9 +97,8 @@ h1 {
       width: 99%;
       padding: 10px 0;
       border: 1px solid #e0e0e0;
-      background-color: #e0e0e0;
-      &.clicked {
-        background-color: transparent;
+      &:hover {
+        background-color: #e0e0e0;
       }
   }
     .vertical {
