--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,17 @@ body {
   line-height: 1;
   color: #e0e0e0;
 }
+
 ol,
 ul {
   padding-left: 0;
   list-style: none;
 }
+
 h1 {
   font-size: 36px;
 }
+
 .App {
   width: 100%;
   margin-left: auto;
@@ -27,46 +30,56 @@ h1 {
 .App-header {
   display: flex;
   justify-content: end;
+
   .logo {
     padding: 30px 60px;
     text-align: right;
+
     /* margin: auto; */
     img {
       width: 180px;
+
       @media screen and (max-width: 600px) {
         width: 100%;
       }
     }
   }
 }
+
 .App-content {
   display: flex;
   flex-direction: row;
   padding: 0 20px;
+
   section {
     padding: 40px 20px;
     margin: 10px;
     border-radius: 10px;
     background-color: #e0e0e0;
+
     @media screen and (max-width: 600px) {
       display: none;
     }
+
     height: fit-content;
     min-height: 500px;
     background-color: transparent;
   }
+
   section.left {
     opacity: 0.9;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     border: none;
+
     img {
       width: 30px;
       border-radius: 50%;
       padding: 10px;
     }
   }
+
   section.right {
     opacity: 0.9;
     flex-grow: 1;
@@ -80,41 +93,48 @@ h1 {
       width: fit-content;
       text-align: center;
       cursor: pointer;
-      width: 96%;
+      width: 98%;
       padding: 10px 0;
       border: 1px solid #222222;
+
       &:hover {
-        background-color: #222222;
+        background-image: linear-gradient(#aaa, #222222, #141414);
       }
     }
+
     .vertical {
       display: flex;
       justify-content: space-around;
       margin: 10px 0;
+
       div {
-        background-color: #222222;
+        background-image: linear-gradient(#aaa, #222222, #141414);
         width: 30%;
         margin: 10px 5px;
+        padding: 30px 10px;
         text-align: center;
         border-radius: 10px;
+
         @media screen and (max-width: 1000px) {
           width: 100%;
           height: fit-content;
           margin: 10px auto;
         }
       }
+
       &.hidden {
         opacity: 0;
       }
     }
   }
+
   h2 {
     color: gray;
   }
 }
 
 footer {
-  color: #eee;
+  color: #222222;
   position: fixed;
   bottom: 0;
   left: 0;
