--- a/src/App.css
+++ b/src/App.css
@@ -24,24 +24,43 @@ h1 {
   margin-left: auto;
   margin-top: 0;
   min-height: 100vh;
-  max-width: 900px;
+  max-width: 860px;
 }
 
 .App-header {
   display: flex;
   justify-content: end;
 
+  .social {
+    display: flex;
+    margin-top: 80px;
+
+    img {
+      height: 40px;
+      margin: 0 20px;
+    }
+
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
+  }
+
   .logo {
     padding: 30px 60px;
     text-align: right;
 
-    /* margin: auto; */
     img {
-      width: 180px;
+      width: 200px;
 
       @media screen and (max-width: 600px) {
         width: 100%;
       }
+    }
+
+    @media screen and (max-width: 600px) {
+      width: 80%;
+      background-color: #222222;
+      text-align: center;
     }
   }
 }
@@ -51,33 +70,15 @@ h1 {
   flex-direction: row;
   padding: 0 20px;
 
+
   section {
     padding: 40px 20px;
     margin: 10px;
     border-radius: 10px;
     background-color: #e0e0e0;
-
-    @media screen and (max-width: 600px) {
-      display: none;
-    }
-
     height: fit-content;
     min-height: 500px;
     background-color: transparent;
-  }
-
-  section.left {
-    opacity: 0.9;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    border: none;
-
-    img {
-      width: 30px;
-      border-radius: 50%;
-      padding: 10px;
-    }
   }
 
   section.right {
@@ -99,6 +100,7 @@ h1 {
 
       &:hover {
         background-image: linear-gradient(#aaa, #222222, #141414);
+        border: none;
       }
     }
 
@@ -106,6 +108,12 @@ h1 {
       display: flex;
       justify-content: space-around;
       margin: 10px 0;
+
+      @media screen and (max-width: 600px) {
+        flex-direction: column;
+
+        /* display: none; */
+      }
 
       div {
         background-image: linear-gradient(#aaa, #222222, #141414);
@@ -116,14 +124,14 @@ h1 {
         border-radius: 10px;
 
         @media screen and (max-width: 1000px) {
-          width: 100%;
+          width: 90%;
           height: fit-content;
           margin: 10px auto;
         }
       }
 
       &.hidden {
-        opacity: 0;
+        display: none;
       }
     }
   }
