--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,7 @@ h1 {
   display: flex;
   flex-direction: row;
   padding: 0 20px;
-
-
   section {
-    padding: 40px 20px;
     margin: 10px;
     border-radius: 10px;
     background-color: #e0e0e0;
@@ -86,10 +83,9 @@ h1 {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-
+    justify-content: end;
     .horizontal {
-      margin: 0 auto;
+      margin: 20px auto;
       border-radius: 10px;
       width: fit-content;
       text-align: center;
@@ -99,24 +95,21 @@ h1 {
       border: 1px solid #222222;
 
       &:hover {
-        background-image: linear-gradient(#aaa, #222222, #141414);
+        background-image: linear-gradient(#808080, #222222, #141414);
         border: none;
       }
     }
 
     .vertical {
       display: flex;
-      justify-content: space-around;
       margin: 10px 0;
-
       @media screen and (max-width: 600px) {
         flex-direction: column;
-
         /* display: none; */
       }
 
       div {
-        background-image: linear-gradient(#aaa, #222222, #141414);
+        background-image: linear-gradient(#808080, #222222, #141414);
         width: 30%;
         margin: 10px 5px;
         padding: 30px 10px;
