--- a/src/App.css
+++ b/src/App.css
@@ -162,31 +162,56 @@ a.collapse {
 
 .apod {
   color: gray;
+  padding: 0 20px;
 
   img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    border: none;
+  }
+
+  iframe {
+    width: 100%;
+    min-height: 420px;
+    border: none;
   }
 
   margin: auto;
   width: 90%;
   max-height: 90vh;
-  padding: 0 20px;
 
   h2 {
     text-align: center;
     line-height: 1;
   }
 
+  .apod-nav {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+
+    .next {
+      float: right;
+    }
+
+    .prev,
+    .next {
+      cursor: pointer;
+    }
+  }
+
   .close-btn {
     text-align: center;
+
     button {
       margin: 0 10px 20px;
       width: max-content;
     }
+
     a {
       font-size: 0.9em;
-      color: gray
+      color: gray;
     }
   }
 }
