--- a/src/App.css
+++ b/src/App.css
@@ -187,11 +187,12 @@ a.collapse {
   }
 
   .apod-nav {
-    width: 85%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     position: absolute;
-
+    left: 0;
     .next {
       float: right;
     }
@@ -200,8 +201,8 @@ a.collapse {
     .next {
       cursor: pointer;
       width: 50px;
-      height: 100px;
       text-align: center;
+      height: 100%;
     }
   }
 
