clean up constants

--- a/src/App.css
+++ b/src/App.css
@@ -225,3 +225,8 @@ a.collapse {
     }
   }
 }
+
+.ReactModal__Overlay, .ReactModal__Overlay--after-open {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+  filter: alpha(opacity=60);
+}
