--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ h1 {
     display: flex;
     margin-top: 100px;
     padding: 20px 0;
+
     img {
       height: 25px;
       margin: -5px 10px -5px 40px;
@@ -102,6 +103,7 @@ h1 {
     .vertical {
       display: flex;
       margin: 10px 0;
+
       @media screen and (max-width: 600px) {
         flex-direction: column;
       }
@@ -135,9 +137,6 @@ h1 {
 
 footer {
   color: #222222;
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   font-size: 12px;
   text-align: center;
@@ -164,12 +163,12 @@ a.collapse {
 
 .apod {
   color: gray;
-  padding: 0 20px;
 
   img {
     width: 100%;
     height: auto;
     border: none;
+    margin-bottom: 10px;
   }
 
   iframe {
@@ -180,12 +179,13 @@ a.collapse {
 
   margin: auto;
   width: 90%;
-  max-height: 88vh;
+  max-height: 95vh;
 
   h2,
   h3 {
     text-align: center;
-    line-height: 1;
+    line-height: 0.5;
+    margin-top: 10px;
   }
 
   .apod-nav {
@@ -225,7 +225,8 @@ a.collapse {
   }
 }
 
-.ReactModal__Overlay, .ReactModal__Overlay--after-open {
+.ReactModal__Overlay,
+.ReactModal__Overlay--after-open {
   background-color: rgba(0, 0, 0, 0.8) !important;
   filter: alpha(opacity=60);
 }
