--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ h1 {
 .App-content {
   display: flex;
   flex-direction: column;
-  padding: 0;
+  padding: 0 30px;
 
   section {
     margin: 10px;
@@ -100,7 +100,6 @@ h1 {
 
         * {
           color: #e0e0e0;
-
         }
       }
     }
@@ -196,7 +195,7 @@ a.collapse {
 
   .apod-nav {
     width: 100%;
-    height: 100%;
+    height: 65%;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -212,7 +211,7 @@ a.collapse {
       width: 100px;
       text-align: center;
       height: 100%;
-      color: #fff;
+      color: transparent;
     }
   }
 
