--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,11 @@ h1 {
           color: #e0e0e0;
         }
       }
+      &.desktop-only {
+        @media screen and (max-width: 800px) {
+          display: none;
+        }
+      }
     }
 
     .vertical {
@@ -240,4 +245,9 @@ a.collapse {
   margin: auto;
   margin-top: 20px;
   max-width: 700px;
+}
+
+.map-container {
+  height: 80%;
+  min-height: 500px;
 }
