--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@ h1 {
 h2 {
   font-size: 22px;
 }
-
 h3 {
   font-size: 18px;
 }
@@ -187,7 +186,8 @@ a.collapse {
     text-align: center;
     width: 100%;
     color: gray;
-    margin: 5px;
+    margin: 0;
+    padding: 0;
   }
   img {
     width: 100%;
@@ -205,7 +205,7 @@ a.collapse {
 
   .apod-nav {
     width: 100%;
-    height: 65%;
+    height: 90%;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -229,7 +229,6 @@ a.collapse {
     text-align: center;
     cursor: pointer;
     button {
-      margin-top: 10px;
       width: max-content;
     }
 
