--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 24px;
 }
 h3 {
   font-size: 18px;
@@ -90,7 +90,7 @@ h3 {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
 
     .horizontal {
       margin: 10px auto;
@@ -158,6 +158,7 @@ footer {
   font-size: 12px;
   text-align: center;
   height: 40px;
+  margin-top: 20px;
 }
 
 a,
@@ -185,7 +186,7 @@ a.collapse {
     text-align: center;
     width: 100%;
     color: gray;
-    margin: 0;
+    margin: 5px;
     padding: 0;
   }
   img {
@@ -276,5 +277,19 @@ a.collapse {
     &.Mui-checked {
       color: #4f4e4e !important;
     }
+  }
+}
+.MuiButtonGroup-root {
+  margin: 5px;
+  button {
+    padding: 15px;
+    border-color: #808080 !important;
+    background-color: transparent !important;
+    color: #808080 !important;
+    &:first-child {
+      width: 100%;
+    }
+    font-size: 20px;
+    font-weight: 600;
   }
 }
