--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 22px;
 }
 h3 {
   font-size: 18px;
@@ -158,7 +158,7 @@ footer {
   font-size: 12px;
   text-align: center;
   height: 40px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 a,
@@ -186,7 +186,8 @@ a.collapse {
     text-align: center;
     width: 100%;
     color: gray;
-    margin: 5px;
+    margin: 0;
+    margin-top: 5px;
     padding: 0;
   }
   img {
