--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ h3 {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
 
     .horizontal {
       margin: 10px auto;
@@ -118,7 +118,7 @@ h3 {
 
     .vertical {
       display: flex;
-      margin-top: 10px;
+      margin: 10px 0;
 
       @media screen and (max-width: 600px) {
         /* flex-direction: column; */
