--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,8 @@ a.collapse {
 .apod,
 .weather {
   h2,
-  h3 {
+  h3,
+  h4 {
     text-align: center;
     width: 100%;
     color: gray;
@@ -299,5 +300,22 @@ a.collapse {
     }
     font-size: 20px;
     font-weight: 600;
+  }
+}
+
+.map-overlay-inner {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 3px;
+  color: "#000";
+  text-align: "left";
+  &.Severe {
+    border: rgb(178, 24, 43) 8px solid;
+  }
+  &.Moderate {
+    border: rgb(239, 138, 98) 8px solid;
+  }
+  &.Unknown {
+    border: rgb(253, 219, 199) 8px solid;
   }
 }
