--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,11 @@ h3 {
     .vertical {
       display: flex;
       margin: 10px 0;
-
+      h1 {
+        text-align: right;
+        width: 100%;
+        color: #808080;
+      }
       @media screen and (max-width: 600px) {
         /* flex-direction: column; */
         display: none;
