--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ h3 {
   display: flex;
   flex-direction: column;
   padding: 0 30px;
-
+  margin: 20px;
   section {
     margin: 10px;
     border-radius: 10px;
@@ -185,6 +185,7 @@ a.collapse {
 }
 
 .apod,
+.epic,
 .weather {
   h2,
   h3,
